# AlexBerDirtyWinYt

./: .dockerignore  .dockerinfo  .gitattributes  .gitignore  Dockerfile  audio_download.sh  download.txt  mp3.bat  pyproject.toml  run.bat  ubunti_future_transition.md  video_download.sh  whisper_readme.txt
app/: license.txt  transcribe.py  yt.bat
more/: audio.bat  best.bat  date.bat  mp3.bat  subs.bat
src/neural_extractor_node/: transcribe.py  ubuntu_raw_full_transcript.txt
