[project]
name = "neural-extractor-node"
version = "0.1.3"
description = "Deterministic Whisper Pipeline"
# STRICT LOCK: Force Python 3.11/3.12 for CUDA compatibility
requires-python = ">=3.11, <=3.12"

dependencies =[
    # STRICT LOCK: Stable base vector (date-based versioning)
    "openai-whisper==20240930",
    # STRICT LOCK: Pinning the phase-space volume for CUDA 13.0 / Blackwell (prevents ABI failures)
    "torch==2.12.0"
    # torchaudio dropped: 2.12.0 wasn't released and Whisper extracts audio via ffmpeg natively
]

[tool.uv.sources]
# Direct PyTorch to utilize the CUDA 13.0 index (RTX 5070 Ti / sm_120)
torch = { index = "pytorch-cu130" }
#torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
preview = true

[tool.uv.extra-build-dependencies]
# # STRICT LOCK: Whisper 20240930 relies on pkg_resources which was purged in setuptools 82+
openai-whisper = ["setuptools<81"]
